Replace deprecated node-sass with sass #2 (#173942)
The previous PR https://github.com/elastic/kibana/pull/161813 was
reverted due to the broken webpack config

https://github.com/elastic/kibana/commit/eef1afcd59334e94e8ef3a99b62176099125e336

---------

Co-authored-by: Tiago Costa <tiago.costa@elastic.co>
Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>
Co-authored-by: Jon <jon@elastic.co>

--- a/package.json
+++ b/package.json
@@ -769,7 +769,6 @@
     "multimatch": "^4.0.0",
     "mutation-observer": "^1.0.3",
     "ncp": "^2.0.0",
-    "node-sass": "^8.0.0",
     "null-loader": "^3.0.0",
     "nyc": "^15.0.1",
     "oboe": "^2.1.4",
@@ -792,7 +791,8 @@
     "regenerate": "^1.4.0",
     "resolve": "^1.7.1",
     "rxjs-marbles": "^5.0.6",
-    "sass-loader": "^10.4.1",
+    "sass-embedded": "^1.69.5",
+    "sass-loader": "^10.5.1",
     "sass-resources-loader": "^2.0.1",
     "selenium-webdriver": "^4.16.0",
     "simple-git": "^3.16.0",
