--- a/src/plugins/presentation_util/kibana.jsonc
+++ b/src/plugins/presentation_util/kibana.jsonc
@@ -9,13 +9,17 @@
     "browser": true,
     "requiredPlugins": [
       "savedObjects",
-      "kibanaReact",
       "contentManagement",
       "embeddable",
       "expressions",
       "dataViews",
       "uiActions"
     ],
-    "extraPublicDirs": ["common"]
+    "requiredBundles": [
+      "kibanaReact",
+    ],
+    "extraPublicDirs": [
+      "common"
+    ]
   }
 }
