--- a/x-pack/plugins/embeddable_enhanced/kibana.jsonc
+++ b/x-pack/plugins/embeddable_enhanced/kibana.jsonc
@@ -9,9 +9,9 @@
     "browser": true,
     "requiredPlugins": [
       "embeddable",
-      "kibanaReact",
       "uiActions",
       "uiActionsEnhanced"
-    ]
+    ],
+    "requiredBundles": [],
   }
 }
