--- a/x-pack/plugins/stack_connectors/kibana.jsonc
+++ b/x-pack/plugins/stack_connectors/kibana.jsonc
@@ -13,9 +13,9 @@
     "requiredPlugins": [
       "actions",
       "esUiShared",
-      "kibanaReact",
       "triggersActionsUi"
     ],
+    "requiredBundles": [],
     "extraPublicDirs": [
       "public/common"
     ]
