--- a/x-pack/plugins/cloud_security_posture/kibana.jsonc
+++ b/x-pack/plugins/cloud_security_posture/kibana.jsonc
@@ -7,7 +7,10 @@
     "id": "cloudSecurityPosture",
     "server": true,
     "browser": true,
-    "configPath": ["xpack", "cloudSecurityPosture"],
+    "configPath": [
+      "xpack",
+      "cloudSecurityPosture"
+    ],
     "requiredPlugins": [
       "navigation",
       "data",
@@ -21,10 +24,15 @@
       "cloud",
       "licensing",
       "share",
-      "kibanaUtils",
       "alerting"
     ],
-    "optionalPlugins": ["usageCollection"],
-    "requiredBundles": ["kibanaReact", "usageCollection"]
+    "optionalPlugins": [
+      "usageCollection"
+    ],
+    "requiredBundles": [
+      "kibanaReact",
+      "usageCollection",
+      "kibanaUtils",
+    ]
   }
 }
