[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/dataset_quality/tsconfig.json
+++ b/x-pack/plugins/dataset_quality/tsconfig.json
@@ -28,6 +28,7 @@
     "@kbn/es-types",
     "@kbn/deeplinks-observability",
     "@kbn/router-utils",
+    "@kbn/core-http-router-server-internal",
   ],
   "exclude": [
     "target/**/*",
