[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/observability_shared/tsconfig.json
+++ b/x-pack/plugins/observability_shared/tsconfig.json
@@ -37,7 +37,8 @@
     "@kbn/advanced-settings-plugin",
     "@kbn/utility-types",
     "@kbn/share-plugin",
-    "@kbn/shared-ux-error-boundary"
+    "@kbn/shared-ux-error-boundary",
+    "@kbn/core-chrome-browser"
   ],
   "exclude": ["target/**/*"]
 }
