--- a/x-pack/plugins/security/tsconfig.json
+++ b/x-pack/plugins/security/tsconfig.json
@@ -65,7 +65,8 @@
     "@kbn/analytics-client",
     "@kbn/security-plugin-types-common",
     "@kbn/security-plugin-types-public",
-    "@kbn/security-plugin-types-server"
+    "@kbn/security-plugin-types-server",
+    "@kbn/kibana-utils-plugin"
   ],
   "exclude": [
     "target/**/*",
