--- a/x-pack/plugins/log_explorer/tsconfig.json
+++ b/x-pack/plugins/log_explorer/tsconfig.json
@@ -42,6 +42,7 @@
     "@kbn/unified-field-list",
     "@kbn/unified-search-plugin",
     "@kbn/xstate-utils",
+    "@kbn/cell-actions",
   ],
   "exclude": [
     "target/**/*"
