--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -966,6 +966,8 @@
       "@kbn/language-documentation-popover/*": ["packages/kbn-language-documentation-popover/*"],
       "@kbn/lens-embeddable-utils": ["packages/kbn-lens-embeddable-utils"],
       "@kbn/lens-embeddable-utils/*": ["packages/kbn-lens-embeddable-utils/*"],
+      "@kbn/lens-inline-editing-example-plugin": ["x-pack/examples/lens_embeddable_inline_editing_example"],
+      "@kbn/lens-inline-editing-example-plugin/*": ["x-pack/examples/lens_embeddable_inline_editing_example/*"],
       "@kbn/lens-plugin": ["x-pack/plugins/lens"],
       "@kbn/lens-plugin/*": ["x-pack/plugins/lens/*"],
       "@kbn/license-api-guard-plugin": ["x-pack/plugins/license_api_guard"],
