[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
+++ b/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
@@ -18,5 +18,6 @@
     "@kbn/tooling-log",
     "@kbn/repo-info",
     "@kbn/test-subj-selector",
+    "@kbn/ftr-common-functional-services",
   ]
 }
