Squashed commit of the following:
commit 80c7fe5f560a74f82dd72dfa03023ff12492b21f
Merge: ee223a1e5dc 2648f51826c
Author: Timothy Sullivan <tsullivan@elastic.co>
Date:   Tue Jan 2 16:40:08 2024 -0700

    Merge branch 'serverless-search/no-data-state' of github.com:tsullivan/kibana into serverless-search/no-data-state

commit ee223a1e5dca195df15675e755d5acd96825393c
Author: Timothy Sullivan <tsullivan@elastic.co>
Date:   Thu Dec 21 11:52:34 2023 -0700

    Update data_view_management and analytics_no_data with new logic for Serverless Elasticsearch

commit 2648f51826c466edc2d1e6dc2406376b6597cbd1
Merge: 168ede51f43 f0af2b91b47
Author: Timothy Sullivan <tsullivan@elastic.co>
Date:   Wed Dec 20 10:23:35 2023 -0700

    Merge branch 'main' into serverless-search/no-data-state

commit 168ede51f43a760882f7dfc7afcc590afed05e77
Author: Timothy Sullivan <tsullivan@elastic.co>
Date:   Wed Dec 20 10:16:15 2023 -0700

    fix types

commit 47bdc3fd736bb8b5a70497afa4da8802925d6c93
Author: kibanamachine <42973632+kibanamachine@users.noreply.github.com>
Date:   Wed Dec 20 06:40:46 2023 +0000

    [CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

commit 521251183fb6c48ed0deea3204d5695a7d75f8ca
Author: Timothy Sullivan <tsullivan@elastic.co>
Date:   Mon Dec 18 13:01:53 2023 -0700

    Update data_view_management and analytics_no_data with new logic for Serverless Elasticsearch

commit fcadb7c6708eb086acf0e2df060ae5ea284fa12a
Author: Timothy Sullivan <tsullivan@elastic.co>
Date:   Mon Dec 18 14:57:50 2023 -0700

    Move new test outside of serverless area

commit 8d0fe4197acb9a039a408ed419b8b6d99ead1a1a
Author: Timothy Sullivan <tsullivan@elastic.co>
Date:   Mon Dec 18 12:33:16 2023 -0700

    fix path of the new endpoint

commit 714bc858db5ba659f454055d7ddb17dbacf17bbf
Author: Tim Sullivan <tsullivan@users.noreply.github.com>
Date:   Mon Dec 18 12:29:49 2023 -0700

    Update x-pack/plugins/security/server/routes/api_keys/has.ts

    Co-authored-by: Aleh Za

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -750,6 +750,7 @@ packages/shared-ux/page/no_data_config/types @elastic/appex-sharedux
 packages/shared-ux/page/no_data/mocks @elastic/appex-sharedux
 packages/shared-ux/page/no_data/types @elastic/appex-sharedux
 packages/shared-ux/page/solution_nav @elastic/appex-sharedux
+packages/shared-ux/prompt/add_data @elastic/appex-sharedux
 packages/shared-ux/prompt/no_data_views/impl @elastic/appex-sharedux
 packages/shared-ux/prompt/no_data_views/mocks @elastic/appex-sharedux
 packages/shared-ux/prompt/no_data_views/types @elastic/appex-sharedux
