--- a/src/plugins/no_data_page/tsconfig.json
+++ b/src/plugins/no_data_page/tsconfig.json
@@ -9,6 +9,7 @@
     "@kbn/core-plugins-browser",
     "@kbn/core-plugins-server",
     "@kbn/config-schema",
+    "@kbn/core-http-browser",
   ],
   "exclude": ["target/**/*"]
 }
