--- a/x-pack/plugins/maps/tsconfig.json
+++ b/x-pack/plugins/maps/tsconfig.json
@@ -78,6 +78,9 @@
     "@kbn/search-response-warnings",
     "@kbn/calculate-width-from-char-count",
     "@kbn/content-management-table-list-view-common",
+    "@kbn/text-based-languages",
+    "@kbn/es-types",
+    "@kbn/data-service",
   ],
   "exclude": [
     "target/**/*",
