--- a/src/plugins/no_data_page/tsconfig.json
+++ b/src/plugins/no_data_page/tsconfig.json
@@ -10,6 +10,7 @@
     "@kbn/core-plugins-server",
     "@kbn/config-schema",
     "@kbn/core-http-browser",
+    "@kbn/core-http-browser-mocks",
   ],
   "exclude": ["target/**/*"]
 }
