--- a/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
+++ b/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
@@ -2,22 +2,15 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "target/types",
-    "types": [
-      "jest",
-      "node"
-    ]
+    "types": ["jest", "cheerio", "node"]
   },
-  "include": [
-    "**/*.ts",
-  ],
-  "exclude": [
-    "target/**/*"
-  ],
+  "include": ["**/*.ts"],
+  "exclude": ["target/**/*"],
   "kbn_references": [
     "@kbn/test",
     "@kbn/tooling-log",
     "@kbn/repo-info",
     "@kbn/test-subj-selector",
-    "@kbn/ftr-common-functional-services",
+    "@kbn/ftr-common-functional-services"
   ]
 }
