[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/src/plugins/data_view_management/tsconfig.json
+++ b/src/plugins/data_view_management/tsconfig.json
@@ -38,6 +38,7 @@
     "@kbn/no-data-page-plugin",
     "@kbn/core-application-browser",
     "@kbn/core-doc-links-browser",
+    "@kbn/shared-ux-utility",
   ],
   "exclude": [
     "target/**/*",
