--- a/src/plugins/data_view_management/tsconfig.json
+++ b/src/plugins/data_view_management/tsconfig.json
@@ -39,6 +39,8 @@
     "@kbn/core-application-browser",
     "@kbn/core-doc-links-browser",
     "@kbn/shared-ux-utility",
+    "@kbn/shared-ux-page-analytics-no-data",
+    "@kbn/core-http-browser",
   ],
   "exclude": [
     "target/**/*",
