--- a/packages/kbn-reporting/public/tsconfig.json
+++ b/packages/kbn-reporting/public/tsconfig.json
@@ -2,17 +2,10 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "target/types",
-    "types": [
-      "jest",
-      "node"
-    ]
+    "types": ["jest", "node"]
   },
-  "include": [
-    "**/*.ts", "**/*.tsx"
-  ],
-  "exclude": [
-    "target/**/*"
-  ],
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["target/**/*"],
   "kbn_references": [
     "@kbn/reporting-common",
     "@kbn/core",
@@ -34,5 +27,6 @@
     "@kbn/home-plugin",
     "@kbn/management-plugin",
     "@kbn/ui-actions-plugin",
+    "@kbn/saved-search-plugin"
   ]
 }
