[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-reporting/public/tsconfig.json
+++ b/packages/kbn-reporting/public/tsconfig.json
@@ -27,6 +27,7 @@
     "@kbn/home-plugin",
     "@kbn/management-plugin",
     "@kbn/ui-actions-plugin",
-    "@kbn/saved-search-plugin"
+    "@kbn/saved-search-plugin",
+    "@kbn/presentation-publishing"
   ]
 }
