--- a/x-pack/plugins/observability_solution/dataset_quality/tsconfig.json
+++ b/x-pack/plugins/observability_solution/dataset_quality/tsconfig.json
@@ -43,7 +43,8 @@
     "@kbn/ui-actions-plugin",
     "@kbn/metrics-data-access-plugin",
     "@kbn/discover-plugin",
-    "@kbn/shared-ux-prompt-no-data-views-types"
+    "@kbn/shared-ux-prompt-no-data-views-types",
+    "@kbn/utility-types"
   ],
   "exclude": ["target/**/*"]
 }
