--- a/x-pack/plugins/observability_solution/observability/tsconfig.json
+++ b/x-pack/plugins/observability_solution/observability/tsconfig.json
@@ -100,6 +100,8 @@
     "@kbn/aiops-log-rate-analysis",
     "@kbn/react-kibana-context-render",
     "@kbn/react-kibana-mount",
+    "@kbn/core-chrome-browser",
+    "@kbn/navigation-plugin",
   ],
   "exclude": [
     "target/**/*"
