--- a/.buildkite/pipelines/pull_request/security_solution/cypress_burn.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/cypress_burn.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/defend_workflows_burn.sh
-    label: '[Soft fail] Defend Workflows Cypress Tests, burning changed specs'
+    label: "[Soft fail] Defend Workflows Cypress Tests, burning changed specs"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       enableNestedVirtualization: true
       localSsds: 1
@@ -19,10 +19,10 @@ steps:
       automatic: false
 
   - command: .buildkite/scripts/steps/functional/defend_workflows_serverless_burn.sh
-    label: '[Soft fail] Defend Workflows Cypress Tests on Serverless, burning changed specs'
+    label: "[Soft fail] Defend Workflows Cypress Tests on Serverless, burning changed specs"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       enableNestedVirtualization: true
       localSsds: 1
@@ -38,10 +38,10 @@ steps:
       automatic: false
 
   - command: .buildkite/scripts/steps/functional/security_solution_burn.sh
-    label: '[Soft fail] Security Solution Cypress tests, burning changed specs'
+    label: "[Soft fail] Security Solution Cypress tests, burning changed specs"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -55,10 +55,10 @@ steps:
     soft_fail: true
 
   - command: .buildkite/scripts/steps/functional/osquery_cypress_burn.sh
-    label: '[Soft fail] Osquery Cypress Tests, burning changed specs'
+    label: "[Soft fail] Osquery Cypress Tests, burning changed specs"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
