--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -4,7 +4,7 @@ steps:
     timeout_in_minutes: 10
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-2
 
@@ -14,7 +14,7 @@ steps:
     label: Build Kibana Distribution and Plugins
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-16
       preemptible: true
@@ -23,14 +23,14 @@ steps:
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
 
   - command: .buildkite/scripts/steps/quick_checks.sh
-    label: 'Quick Checks'
+    label: "Quick Checks"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-2
       preemptible: true
@@ -38,7 +38,7 @@ steps:
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
 
   - wait
@@ -47,7 +47,7 @@ steps:
     label: Mark CI Stats as ready
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-2
     timeout_in_minutes: 10
@@ -56,31 +56,31 @@ steps:
       - build_api_docs
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 1
 
   - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
-    label: 'Pick Test Group Run Order'
+    label: "Pick Test Group Run Order"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-2
     timeout_in_minutes: 10
     env:
-      JEST_UNIT_SCRIPT: '.buildkite/scripts/steps/test/jest.sh'
-      JEST_INTEGRATION_SCRIPT: '.buildkite/scripts/steps/test/jest_integration.sh'
-      FTR_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/ftr_configs.sh'
+      JEST_UNIT_SCRIPT: ".buildkite/scripts/steps/test/jest.sh"
+      JEST_INTEGRATION_SCRIPT: ".buildkite/scripts/steps/test/jest_integration.sh"
+      FTR_CONFIGS_SCRIPT: ".buildkite/scripts/steps/test/ftr_configs.sh"
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 1
 
   - command: .buildkite/scripts/steps/lint.sh
-    label: 'Linting'
+    label: "Linting"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-8
       preemptible: true
@@ -88,14 +88,14 @@ steps:
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
 
   - command: .buildkite/scripts/steps/check_types.sh
-    label: 'Check Types'
+    label: "Check Types"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -103,14 +103,14 @@ steps:
     timeout_in_minutes: 70
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
 
   - command: .buildkite/scripts/steps/lint_with_types.sh
-    label: 'Linting (with types)'
+    label: "Linting (with types)"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-16
       preemptible: true
@@ -118,29 +118,29 @@ steps:
     timeout_in_minutes: 90
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
 
   - command: .buildkite/scripts/steps/checks.sh
-    label: 'Checks'
+    label: "Checks"
     key: checks
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-2
       preemptible: true
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
 
   - command: .buildkite/scripts/steps/api_docs/build_api_docs.sh
-    label: 'Build API Docs'
+    label: "Build API Docs"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -148,5 +148,5 @@ steps:
     timeout_in_minutes: 90
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
