--- a/.buildkite/pipelines/pull_request/deploy_cloud.yml
+++ b/.buildkite/pipelines/pull_request/deploy_cloud.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/cloud/build_and_deploy.sh
-    label: 'Build and Deploy to Cloud'
+    label: "Build and Deploy to Cloud"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-2
       preemptible: true
@@ -14,5 +14,5 @@ steps:
     soft_fail: true
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
