--- a/.buildkite/pipelines/pull_request/deploy_project.yml
+++ b/.buildkite/pipelines/pull_request/deploy_project.yml
@@ -1,10 +1,10 @@
 steps:
   - command: .buildkite/scripts/steps/artifacts/docker_image.sh
-    label: 'Build Project Image'
+    label: "Build Project Image"
     key: build_project_image
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-16
       preemptible: true
@@ -12,13 +12,13 @@ steps:
     soft_fail: true
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
   - command: .buildkite/scripts/steps/serverless/deploy.sh
-    label: 'Deploy Project'
+    label: "Deploy Project"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
