--- a/.buildkite/pipelines/pull_request/response_ops.yml
+++ b/.buildkite/pipelines/pull_request/response_ops.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/response_ops.sh
-    label: 'Rules, Alerts and Exceptions ResponseOps Cypress Tests on Security Solution'
+    label: "Rules, Alerts and Exceptions ResponseOps Cypress Tests on Security Solution"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -14,5 +14,5 @@ steps:
     parallelism: 9
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 1
