--- a/.buildkite/pipelines/pull_request/response_ops_cases.yml
+++ b/.buildkite/pipelines/pull_request/response_ops_cases.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/response_ops_cases.sh
-    label: 'Cases Cypress Tests on Security Solution'
+    label: "Cases Cypress Tests on Security Solution"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -13,5 +13,5 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 1
