--- a/.buildkite/pipelines/pull_request/security_solution/defend_workflows.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/defend_workflows.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/defend_workflows.sh
-    label: 'Defend Workflows Cypress Tests'
+    label: "Defend Workflows Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       enableNestedVirtualization: true
       localSsds: 1
@@ -16,14 +16,14 @@ steps:
     parallelism: 20
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/defend_workflows_serverless.sh
-    label: 'Defend Workflows Cypress Tests on Serverless'
+    label: "Defend Workflows Cypress Tests on Serverless"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       enableNestedVirtualization: true
       localSsds: 1
@@ -36,15 +36,14 @@ steps:
     parallelism: 14
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
-
 #   status_exception: Native role management is not enabled in this Elasticsearch instance
 #  - command: .buildkite/scripts/steps/functional/security_serverless_defend_workflows.sh
 #    label: 'Serverless Security Defend Workflows Cypress Tests'
 #    agents:
 #      image: family/kibana-fips-ubuntu-2004
-#      imageProject: elastic-images-prod
+#      imageProject: elastic-images-qa
 #      provider: gcp
 #      machineType: n2-standard-4
 #      preemptible: true
