--- a/.buildkite/pipelines/pull_request/security_solution/detection_engine.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/detection_engine.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine.sh
-    label: 'Serverless Detection Engine - Security Solution Cypress Tests'
+    label: "Serverless Detection Engine - Security Solution Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -14,14 +14,14 @@ steps:
     parallelism: 5
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine_exceptions.sh
-    label: 'Serverless Detection Engine - Exceptions - Security Solution Cypress Tests'
+    label: "Serverless Detection Engine - Exceptions - Security Solution Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -32,14 +32,14 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_solution_detection_engine.sh
-    label: 'Detection Engine - Security Solution Cypress Tests'
+    label: "Detection Engine - Security Solution Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -50,14 +50,14 @@ steps:
     parallelism: 5
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_solution_detection_engine_exceptions.sh
-    label: 'Detection Engine - Exceptions - Security Solution Cypress Tests'
+    label: "Detection Engine - Exceptions - Security Solution Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -68,5 +68,5 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
