--- a/.buildkite/pipelines/pull_request/security_solution/entity_analytics.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/entity_analytics.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/security_serverless_entity_analytics.sh
-    label: 'Serverless Entity Analytics - Security Cypress Tests'
+    label: "Serverless Entity Analytics - Security Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -14,14 +14,14 @@ steps:
     parallelism: 3
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_solution_entity_analytics.sh
-    label: 'Entity Analytics - Security Solution Cypress Tests'
+    label: "Entity Analytics - Security Solution Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -32,5 +32,5 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
