--- a/.buildkite/pipelines/pull_request/security_solution/osquery_cypress.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/osquery_cypress.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/osquery_cypress.sh
-    label: 'Osquery Cypress Tests'
+    label: "Osquery Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -14,14 +14,14 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_osquery.sh
-    label: 'Serverless Osquery Cypress Tests'
+    label: "Serverless Osquery Cypress Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -32,5 +32,5 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 1
