--- a/.buildkite/pipelines/pull_request/slo_plugin_e2e.yml
+++ b/.buildkite/pipelines/pull_request/slo_plugin_e2e.yml
@@ -1,9 +1,9 @@
 steps:
   - command: .buildkite/scripts/steps/functional/slo_plugin_e2e.sh
-    label: 'SLO Plugin @elastic/synthetics Tests'
+    label: "SLO Plugin @elastic/synthetics Tests"
     agents:
       image: family/kibana-fips-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
@@ -12,10 +12,10 @@ steps:
       - quick_checks
     timeout_in_minutes: 30
     artifact_paths:
-      - 'x-pack/plugins/observability_solution/slo/e2e/.journeys/**/*'
+      - "x-pack/plugins/observability_solution/slo/e2e/.journeys/**/*"
     retry:
       automatic:
-        - exit_status: '-1'
+        - exit_status: "-1"
           limit: 3
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 1
