Remove trailing comma

--- a/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
@@ -50,6 +50,6 @@
     "@kbn/alerts-ui-shared",
     "@kbn/es-query",
     "@kbn/slo-plugin",
-    "@kbn/ui-actions-plugin",
+    "@kbn/ui-actions-plugin"
   ],
 }
