Revert "[BK] Migrate batch 2 - kibana-pull-request job (#183158)"
This reverts commit 09a165f3e61437e6e46aad74cadf0ee05b4bf714.

--- a/.buildkite/pipelines/pull_request/fips.yml
+++ b/.buildkite/pipelines/pull_request/fips.yml
@@ -2,11 +2,7 @@ steps:
   - command: .buildkite/scripts/steps/fips/build.sh
     label: 'Build FIPS Image'
     agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-2
-      preemptible: true
+      queue: n2-2-spot
     depends_on:
       - build
       - quick_checks
