--- a/.buildkite/pipelines/pull_request/deploy_project.yml
+++ b/.buildkite/pipelines/pull_request/deploy_project.yml
@@ -3,11 +3,7 @@ steps:
     label: 'Build Project Image'
     key: build_project_image
     agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-16
-      preemptible: true
+      queue: n2-16-spot
     timeout_in_minutes: 60
     soft_fail: true
     retry:
@@ -17,11 +13,7 @@ steps:
   - command: .buildkite/scripts/steps/serverless/deploy.sh
     label: 'Deploy Project'
     agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-4
-      preemptible: true
+      queue: kibana-default
     timeout_in_minutes: 10
     depends_on:
       - build_project_image
