--- a/.buildkite/pipelines/pull_request/observability_onboarding_cypress.yml
+++ b/.buildkite/pipelines/pull_request/observability_onboarding_cypress.yml
@@ -2,11 +2,7 @@ steps:
   - command: .buildkite/scripts/steps/functional/observability_onboarding_cypress.sh
     label: 'Observability onboarding Cypress Tests'
     agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-4
-      preemptible: true
+      queue: n2-4-spot
     depends_on:
       - build
       - quick_checks
