[ci] Use c3 instances on time sensitive tasks
Uses faster instances on checks blocking pull request cloud
deployments

--- a/.buildkite/pipelines/artifacts_container_image.yml
+++ b/.buildkite/pipelines/artifacts_container_image.yml
@@ -5,5 +5,5 @@ steps:
       image: family/kibana-ubuntu-2004
       imageProject: elastic-images-qa
       provider: gcp
-      machineType: n2-standard-16
+      machineType: c3-standard-22
     timeout_in_minutes: 60
