Review#4: rename `feature.disabled` to `feature.hidden`

--- a/config/serverless.security.yml
+++ b/config/serverless.security.yml
@@ -11,10 +11,10 @@ xpack.search.notebooks.enabled: false
 
 ## Fine-tune the security solution feature privileges. Also, refer to `serverless.yml` for the project-agnostic overrides.
 xpack.features.overrides:
-  ### Dashboard feature is disabled since it's automatically granted by SIEM feature.
-  dashboard.disabled: true
-  ### Discover feature is disabled since it's automatically granted by SIEM feature.
-  discover.disabled: true
+  ### Dashboard feature is hidden in Role management since it's automatically granted by SIEM feature.
+  dashboard.hidden: true
+  ### Discover feature is hidden in Role management since it's automatically granted by SIEM feature.
+  discover.hidden: true
   ### Machine Learning feature is moved from Analytics category to the Security one as the last item.
   ml:
     category: "security"
