--- a/config/serverless.oblt.yml
+++ b/config/serverless.oblt.yml
@@ -18,8 +18,8 @@ xpack.features.overrides:
   ml:
     category: "observability"
     order: 1200
-  ### Stack alerts is disabled since it's not needed.
-  stackAlerts.disabled: true
+  ### Stack alerts is hidden in Role management since it's not needed.
+  stackAlerts.hidden: true
 
 ## Enable the slo plugin
 xpack.slo.enabled: true
