[Investigate] APM Service Inventory widget

--- a/x-pack/plugins/observability_solution/apm/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/apm/kibana.jsonc
@@ -50,7 +50,8 @@
       "licenseManagement",
       "profilingDataAccess",
       "cases",
-      "observabilityAIAssistant"
+      "observabilityAIAssistant",
+      "investigate"
     ],
     "requiredBundles": [
       "fleet",
@@ -58,7 +59,8 @@
       "kibanaUtils",
       "ml",
       "observability",
-      "maps"
+      "maps",
+      "investigate"
     ]
   }
 }
