--- a/x-pack/plugins/observability_solution/investigate_app/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/investigate_app/kibana.jsonc
@@ -19,7 +19,8 @@
       "datasetQuality",
       "slo",
       "unifiedSearch",
-      "security"
+      "security",
+      "apm"
     ],
     "requiredBundles": [
       "kibanaReact",
