--- a/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
@@ -54,6 +54,7 @@
     "@kbn/management-settings-ids",
     "@kbn/dashboard-plugin",
     "@kbn/security-plugin",
-    "@kbn/ui-actions-plugin"
+    "@kbn/ui-actions-plugin",
+    "@kbn/apm-plugin"
   ],
 }
