adding msw library

--- a/renovate.json
+++ b/renovate.json
@@ -377,6 +377,14 @@
       "matchBaseBranches": ["main"],
       "labels": ["Team:ESQL", "release_note:skip"],
       "enabled": true
+    },
+    {
+      "groupName": "MSW",
+      "matchPackageNames": ["msw"],
+      "reviewers": ["team:kibana-cloud-security-posture"],
+      "matchBaseBranches": ["main"],
+      "labels": ["Team: Cloud Security", "release_note:skip", "backport:skip"],
+      "enabled": true
     }
   ]
 }
