Adding requiredClusterPrivileges to enable/disable the app

--- a/x-pack/plugins/data_quality/kibana.jsonc
+++ b/x-pack/plugins/data_quality/kibana.jsonc
@@ -4,12 +4,13 @@
   "owner": "@elastic/obs-ux-logs-team",
   "plugin": {
     "id": "dataQuality",
-    "server": false,
+    "server": true,
     "browser": true,
     "configPath": ["xpack", "data_quality"],
     "requiredPlugins": [
       "datasetQuality",
       "management",
+      "features",
   ],
     "optionalPlugins": [],
     "requiredBundles": [
