[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/data_quality/tsconfig.json
+++ b/x-pack/plugins/data_quality/tsconfig.json
@@ -23,6 +23,7 @@
     "@kbn/core-notifications-browser",
     "@kbn/i18n-react",
     "@kbn/core-chrome-browser",
+    "@kbn/features-plugin",
   ],
   "exclude": ["target/**/*"]
 }
