Create ES|QL where filters for ordinal charts

--- a/src/plugins/text_based_languages/tsconfig.json
+++ b/src/plugins/text_based_languages/tsconfig.json
@@ -18,7 +18,8 @@
     "@kbn/index-management",
     "@kbn/i18n",
     "@kbn/config-schema",
-    "@kbn/esql-utils"
+    "@kbn/esql-utils",
+    "@kbn/ui-actions-plugin"
   ],
   "exclude": [
     "target/**/*",
