[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/src/plugins/data/tsconfig.json
+++ b/src/plugins/data/tsconfig.json
@@ -55,7 +55,8 @@
     "@kbn/code-editor",
     "@kbn/core-test-helpers-model-versions",
     "@kbn/react-kibana-mount",
-    "@kbn/search-types"
+    "@kbn/search-types",
+    "@kbn/esql-utils"
   ],
   "exclude": [
     "target/**/*",
